gcc/testsuite/g++.dg/modules/atom-decl-1.C
// { dg-options "-fmodules-atom" }

int i; // { dg-message "ended here" }

module thing; // { dg-error "within module preamble" }
